bug 311295: Use JSPROP_SHARED to make sure that Removes really remove elements from node lists. r+sr+a=brendan/schrep